syntax = "proto3";

package google.protobuf;

option go_package = "github.com/infraboard/protoc-gen-go-ext/extension/tag;tag";
option java_package = "com.google.protobuf";
option java_outer_classname = "TagProtos";
option csharp_namespace = "Google.Protobuf.Reflection";
option objc_class_prefix = "GPB";
option cc_enable_arenas = true;

// descriptor.proto must be optimized for speed because reflection-based
// algorithms don't work during bootstrapping.
option optimize_for = SPEED;

import "google/protobuf/descriptor.proto";

extend google.protobuf.FieldOptions {
  FieldTag field_tag = 65000;
}


message FieldTag {
  // struct tag.
  string struct_tag = 1;// custom struct tag
  UpdateStrategy update_strategy = 2;// update strategy

  // 日志格式
  enum UpdateStrategy {
    update = 0;// use custom struct tag to update struct tag generated by proto
    replace = 1;// use custom struct tag to replace struct tag generated by proto
  }
}
